added readme and tests