@@ -4,10 +4,13 @@ import java.util.*;
 
 public class Pile {
 
-    private final LinkedList<Stone> pile;
+    public static class PileIsEmptyException extends RuntimeException {
+    }
+
+    private final List<Stone> pile;
 
     public Pile() {
-        pile = new LinkedList<>();
+        pile = new ArrayList<>();
         for (int first = 0; first <= 5; first++) {
             for (int second = first; second <= 5; second++) {
                 for (int third = second; third <= 5; third++) {
@@ -18,7 +21,18 @@ public class Pile {
         Collections.shuffle(pile);
     }
 
+    public boolean isEmpty() {
+        return pile.isEmpty();
+    }
+
+    public int remainingStones() {
+        return pile.size();
+    }
+
     public Stone drawStone() {
-        return pile.removeFirst();
+        if (isEmpty()) {
+            throw new PileIsEmptyException();
+        }
+        return pile.remove(pile.size() - 1);
     }
 }
